--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,42 @@
+
 name: CI
 
 on: [push, pull_request]
 
+env:
+  VERSION: 1337.0.0
+  BRANCH: ''
+  COMMIT: ''
+  
 jobs:  
-  build:        
-    env:
-      VERSION: 1.0.0-beta-1337
+  build:
+    name: Build and verify library    
     runs-on: ubuntu-latest  
-    steps:    
-      - uses: actions/checkout@v1
+    steps:
+      - name: Setting environment variables
+        run: |
+          echo "::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
+          echo "::set-env name=COMMIT::$GITHUB_SHA"
+          echo Version $VERSION - Branch $BRANCH - Commit $COMMIT
+      - uses: actions/checkout@v1   
+      - name: Update tokens in project files
+        uses: cschleiden/replace-tokens@v1
+        with:
+          files: '["*.csproj", "**/*.csproj"]'
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.100'      
-      - name: Building project
-        run: dotnet build -c Release /nowarn:CS1591
-      - name: Running tests
-        run: dotnet test -c Release /nowarn:CS1591
-      - name: Creating package
+      - name: Building and verifying library
+        run: |
+          dotnet build -c Release
+          dotnet test -c Release /nowarn:CS1591
+      - name: Creating library package
         run: dotnet pack src/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION /nowarn:CS1591
-      - name: Find and Replace
-        uses: jacobtomlinson/gha-find-replace@master
-        with:
-          find: "[[VERSION]]"
-          replace: $VERSION
-          include: "Company.RazorTests1.csproj"
-      - name: Creating template package
-        run: dotnet pack template/ -c Release -o ${GITHUB_WORKSPACE} -p:PackageVersion=$VERSION
+      - name: Buidling template package
+        run: dotnet pack template/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION -p:PackageVersion=$VERSION
+      - name: Verifying template
+        run: |
+          dotnet new --install ${GITHUB_WORKSPACE}/Razor.Components.Testing.Library.Template.$VERSION.nupkg
+          dotnet new razortest -o ${GITHUB_WORKSPACE}/Test
+          dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}
+          dotnet test ${GITHUB_WORKSPACE}/Test
