--- a/.github/workflows/nuget-pack-push.yml
+++ b/.github/workflows/nuget-pack-push.yml
@@ -1,4 +1,5 @@
 name: CD
+
 on:
   release:
     types:
@@ -8,34 +9,18 @@ on:
       - prereleased
 
 env:
-  VERSION: ${GITHUB_REF/refs\/tags\/v/}
-
+  VERSION: 0.0.0
+  BRANCH: ''
+  COMMIT: ''
+  
 jobs:  
   build:
-    name: Build and verify library
+    name: Build and verify library    
     runs-on: ubuntu-latest  
-    steps:    
-      - uses: actions/checkout@v1
-      - name: Update version string
-        uses: cschleiden/replace-tokens@v1
-        with:
-          files: '["**/*.csproj"]'
-      - uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '3.1.100'      
-      - name: Building and verifying library
+    steps:
+      - name: Setting environment variables
         run: |
-          dotnet build -c Release
-          dotnet test -c Release /nowarn:CS1591
-      - name: Creating library package
-        run: dotnet pack src/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION /nowarn:CS1591
-      - name: Buidling template package
-        run: dotnet pack template/ -c Release -o ${GITHUB_WORKSPACE} -p:PackageVersion=$VERSION
-      - name: Verifying template
-        run: |
-          dotnet new --install ${GITHUB_WORKSPACE}/Razor.Components.Testing.Library.Template.$VERSION.nupkg
-          dotnet new razortest -o ${GITHUB_WORKSPACE}/Test
-          dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}
-          dotnet test ${GITHUB_WORKSPACE}/Test
-      #- name: Push packages to NuGet.org
-        #run: dotnet nuget push ${GITHUB_WORKSPACE}/*.nupkg -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate
+          echo "::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
+          echo "::set-env name=COMMIT::$GITHUB_SHA"
+          echo "::set-env name=VERSION::$(echo ${GITHUB_REF/refs\/tags\/v/})"
+          echo Version $VERSION - Branch $BRANCH - Commit $COMMIT
