--- a/.github/workflows/nuget-pack-push.yml
+++ b/.github/workflows/nuget-pack-push.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Setting environment variables
         run: |          
           echo "::set-env name=COMMIT::$GITHUB_SHA"
-          echo "::set-env name=VERSION::${GITHUB_REF/refs\/tags\//}
+          echo "::set-env name=VERSION::${GITHUB_REF/refs\/tags\//}"
           echo Version $VERSION - Branch $BRANCH - Commit $COMMIT
