--- a/.github/workflows/nuget-pack-push.yml
+++ b/.github/workflows/nuget-pack-push.yml
@@ -4,9 +4,6 @@ on:
   release:
     types:
       - published        
-      - created
-      - edited
-      - prereleased
 
 env:
   VERSION: 0.0.0
@@ -24,3 +21,27 @@ jobs:
           echo "::set-env name=COMMIT::$GITHUB_SHA"
           echo "::set-env name=VERSION::${GITHUB_REF/refs\/tags\/v/}"      
       - run: echo Version $VERSION - Branch $BRANCH - Commit $COMMIT
+      - uses: actions/checkout@v1   
+      - name: Update tokens in project files
+        uses: cschleiden/replace-tokens@v1
+        with:
+          files: '["*.csproj", "**/*.csproj"]'
+      - uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '3.1.100'      
+      - name: Building and verifying library
+        run: |
+          dotnet build -c Release /nowarn:CS1591
+          dotnet test -c Release /nowarn:CS1591
+      - name: Creating library package
+        run: dotnet pack src/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION /nowarn:CS1591
+      - name: Buidling template package
+        run: dotnet pack template/ -c Release -o ${GITHUB_WORKSPACE} -p:version=$VERSION -p:PackageVersion=$VERSION
+      - name: Verifying template
+        run: |
+          dotnet new --install ${GITHUB_WORKSPACE}/Razor.Components.Testing.Library.Template.$VERSION.nupkg
+          dotnet new razortest -o ${GITHUB_WORKSPACE}/Test
+          dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}
+          dotnet test ${GITHUB_WORKSPACE}/Test
+      - name: Push packages to NuGet.org
+        run: dotnet nuget push ${GITHUB_WORKSPACE}/*.nupkg -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate
