--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 
 name: CI
 
-on: [pull_request]
+on: [push, pull_request]
 
 env:
   VERSION: 1337.0.0
@@ -17,7 +17,7 @@ jobs:
         run: |
           echo "::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
           echo "::set-env name=COMMIT::$GITHUB_SHA"
-          echo Version $VERSION - Branch $BRANCH - Commit $COMMIT
+      - run: echo Version $VERSION - Branch $BRANCH - Commit $COMMIT
       - uses: actions/checkout@v1   
       - name: Update tokens in project files
         uses: cschleiden/replace-tokens@v1
