Added tests for anglesharp extensions, JsRuntimeInvocation and ComponentParameter

--- a/template/Razor.Components.Testing.Library.Template.csproj
+++ b/template/Razor.Components.Testing.Library.Template.csproj
@@ -26,6 +26,10 @@ This library's goal is to make it easy to write comprehensive, stable unit tests
   <ItemGroup>
     <Content Include="template\**\*" Exclude="template\**\bin\**;template\**\obj\**;template\**\.vs\**" />
     <Compile Remove="**\*" />
+    <Compile Remove="template\obj\**" />
+    <Content Remove="template\obj\**" />
+    <EmbeddedResource Remove="template\obj\**" />
+    <None Remove="template\obj\**" />
   </ItemGroup>
 
 </Project>
