Pulled sample from main solution into own solution

--- a/sample/tests/SampleApp.Tests.csproj
+++ b/sample/tests/SampleApp.Tests.csproj
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Egil.RazorComponents.Testing.Library.csproj" />
-    <ProjectReference Include="..\src\Egil.RazorComponents.Testing.Library.SampleApp.csproj" />
+    <ProjectReference Include="..\src\SampleApp.csproj" />
   </ItemGroup>
 
 </Project>
