--- a/sample/src/SampleApp.csproj
+++ b/sample/src/SampleApp.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <IsPackable>false</IsPackable>
     <RootNamespace>Egil.RazorComponents.Testing.SampleApp</RootNamespace>
   </PropertyGroup>
 
