--- a/.github/workflows/nuget-pack-push.yml
+++ b/.github/workflows/nuget-pack-push.yml
@@ -3,7 +3,8 @@ name: NUGET-PACK-PUSH
 on:
   release:
     types:
-      - published        
+      - published
+      - edited
 
 env:
   VERSION: 0.0.0
