--- a/AngleSharpWrappers.Tests/AngleSharpWrappers.Tests.csproj
+++ b/AngleSharpWrappers.Tests/AngleSharpWrappers.Tests.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\AngleSharpWrappers\AngleSharpWrappers.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <DotNetCliToolReference Include="dotnet-reportgenerator-cli" Version="4.4.6" />
+  </ItemGroup>
+
 </Project>
