--- a/sample/tests/SampleApp.Tests.csproj
+++ b/sample/tests/SampleApp.Tests.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
-    <RootNamespace>Egil.RazorComponents.Testing.SampleApp</RootNamespace>
+    <RootNamespace>Bunit.SampleApp</RootNamespace>
+    <AssemblyName>Bunit.SampleApp.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,8 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Egil.RazorComponents.Testing.Library.csproj" />
     <ProjectReference Include="..\src\SampleApp.csproj" />
+    <ProjectReference Include="..\..\src\bunit.csproj" />
   </ItemGroup>
 
 </Project>
