--- a/tests/bunit.tests.csproj
+++ b/tests/bunit.tests.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
     <RootNamespace>Bunit</RootNamespace>
+    <AssemblyName>Bunit.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
