--- a/bunit.docs/toc.yml
+++ b/bunit.docs/toc.yml
@@ -1,5 +1,5 @@
 - name: Getting Started
-  href: docs/getting-started.html
+  href: docs/Getting-Started.html
 - name: Documentation
   href: docs/
 - name: API References
