--- a/src/bunit.csproj
+++ b/src/bunit.csproj
@@ -12,11 +12,11 @@
     <Title>bUnit</Title>
     <PackageLicenseExpression></PackageLicenseExpression>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <RepositoryUrl>https://github.com/egil/razor-components-testing-library</RepositoryUrl>
+    <RepositoryUrl>https://github.com/egil/bunit</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <RepositoryBranch>#{BRANCH}#</RepositoryBranch>
     <RepositoryCommit>#{COMMIT}#</RepositoryCommit>
-    <PackageProjectUrl>https://github.com/egil/razor-components-testing-library</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/egil/bunit</PackageProjectUrl>
     <PackageTags>bUnit;razor components;blazor components;unit testing;testing blazor components;blazor server;blazor wasm</PackageTags> 
     <Authors>Egil Hansen</Authors>
     <Company>Egil Hansen</Company>
@@ -27,7 +27,7 @@
     <PackageDescription>
       **bUnit**, previously known as **Blazor Components Testing Library**, is a unit testing library for Blazor Components. You can easily define components under test in C# or Razor syntax and verify outcome using semantic HTML diffing/comparison logic. You can easily interact with and inspect components, trigger event handlers, provide cascading values, inject services, mock IJsRuntime, and perform snapshot testing.
 
-      This library's goal is to make it easy to write _comprehensive, stable unit tests_ for Blazor Components/Razor Components. To see how, head to the Wiki pages: https://github.com/egil/razor-components-testing-library/wiki
+      This library's goal is to make it easy to write _comprehensive, stable unit tests_ for Blazor Components/Razor Components. To see how, visit https://bunit.egilhanesn.com
     </PackageDescription>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
@@ -49,7 +49,6 @@
     <PackageReference Include="AngleSharp.Css" Version="0.13.0" />
     <PackageReference Include="AngleSharp.Diffing" Version="0.13.3-alpha-44" />
     <PackageReference Include="AngleSharp.Wrappers" Version="1.1.0" />
-    <PackageReference Include="RichardSzalay.MockHttp" Version="6.0.0" />
     <PackageReference Include="xunit.assert" Version="2.4.1" />
     <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.*" PrivateAssets="All" />
