--- a/template/bunit.template.csproj
+++ b/template/bunit.template.csproj
@@ -14,10 +14,10 @@
 
     **bUnit**, previously known as **Blazor Components Testing Library**, is a unit testing library for Blazor Components. You can easily define components under test in C# or Razor syntax and verify outcome using semantic HTML diffing/comparison logic. You can easily interact with and inspect components, trigger event handlers, provide cascading values, inject services, mock IJsRuntime, and perform snapshot testing.
 
-    This library's goal is to make it easy to write _comprehensive, stable unit tests_ for Blazor Components/Razor Components. To see how, head to the Wiki pages: https://github.com/egil/razor-components-testing-library/wiki
+    This library's goal is to make it easy to write _comprehensive, stable unit tests_ for Blazor Components/Razor Components. Head to https://bunit.egilhansen.com to learn more.
   </PackageDescription>	
     <PackageTags>blazor component testing;blazor test;component test;unit test;integration test;</PackageTags>
-	  <PackageProjectUrl>https://github.com/egil/razor-components-testing-library</PackageProjectUrl>
+	  <PackageProjectUrl>https://github.com/egil/bunit</PackageProjectUrl>
     <TargetFramework>netstandard2.1</TargetFramework>
     <IncludeContentInPack>true</IncludeContentInPack>
     <IncludeBuildOutput>false</IncludeBuildOutput>
