--- a/.github/workflows/CI-CD-Docs.yml
+++ b/.github/workflows/CI-CD-Docs.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Docs
 on:
   push:
     branches: 
-      - 'master'
+      - master
     paths-ignore:
       - 'docs/**'
       - '.github/**'
