--- a/.github/workflows/CI-CD-Docs.yml
+++ b/.github/workflows/CI-CD-Docs.yml
@@ -5,8 +5,7 @@ on:
     branches: 
       - master
     paths-ignore:
-      - 'docs/**'
-      - '.github/**'
+      - '!docs/**'
 
 env:
   VERSION: '1.0.0-beta-6'
