--- a/.github/workflows/CI-CD-Docs.yml
+++ b/.github/workflows/CI-CD-Docs.yml
@@ -24,11 +24,10 @@ jobs:
         uses: cschleiden/replace-tokens@v1
         with:
           files: '["docs/*.md", "docs/**/*.md", "*.csproj", "**/*.csproj"]'
-      - uses: actions/setup-dotnet@v1
+      - uses: nikeee/docfx-action@master
+        name: Build Documentation
         with:
-          dotnet-version: '3.1.101'
-      - name: Build docs
-        run: dotnet build docs/
+          args: docs/docfx.json
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
