moved stuff to core

--- a/src/bunit.core/bunit.core.csproj
+++ b/src/bunit.core/bunit.core.csproj
@@ -17,4 +17,9 @@
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.*" PrivateAssets="All" />
 	</ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
