--- a/src/bunit.web/bunit.web.csproj
+++ b/src/bunit.web/bunit.web.csproj
@@ -9,10 +9,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AngleSharp" Version="0.13.0" />
-		<PackageReference Include="AngleSharp.Css" Version="0.13.0" />
-		<PackageReference Include="AngleSharp.Diffing" Version="0.13.3-alpha-44" />
-		<PackageReference Include="AngleSharp.Wrappers" Version="1.1.0" />
+		<PackageReference Include="AngleSharp" Version="0.14.0" />
+		<PackageReference Include="AngleSharp.Css" Version="0.14.0" />
+		<PackageReference Include="AngleSharp.Diffing" Version="0.14.0" />
+		<PackageReference Include="AngleSharp.Wrappers" Version="1.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.*" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.*" />
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.*" />
