--- a/.github/workflows/nuget-pack-push.yml
+++ b/.github/workflows/nuget-pack-push.yml
@@ -29,11 +29,11 @@ jobs:
           files: '["*.csproj", "**/*.csproj"]'
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1.100'      
+          dotnet-version: '3.1.201'
       - name: Building and verifying library
         run: |
-          dotnet build -c Release /nowarn:CS1591
-          dotnet test -c Release /nowarn:CS1591
+          dotnet build src -c Release /nowarn:CS1591
+          dotnet test src -c Release /nowarn:CS1591
       - name: Creating library package
         run: dotnet pack src/ -c Release -o ${GITHUB_WORKSPACE}/lib -p:version=$VERSION /nowarn:CS1591
       - name: Buidling template package
