--- a/src/bunit.xunit/bunit.xunit.csproj
+++ b/src/bunit.xunit/bunit.xunit.csproj
@@ -6,17 +6,18 @@
 		<RootNamespace>Bunit</RootNamespace>
 		<AssemblyName>Bunit.Xunit</AssemblyName>
 	</PropertyGroup>
-	
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.*" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.*" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.*" PrivateAssets="All" />
-		<PackageReference Include="xunit.assert" Version="2.4.1" />
-		<PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
+		<PackageReference Include="xunit.assert" Version="2.4.*" />
+		<PackageReference Include="xunit.extensibility.core" Version="2.4.*" />
+		<PackageReference Include="xunit.extensibility.execution" Version="2.4.*" />
 	</ItemGroup>
-	
+
 	<ItemGroup>
-	  <ProjectReference Include="..\bunit.core\bunit.core.csproj" />
+		<ProjectReference Include="..\bunit.core\bunit.core.csproj" />
 	</ItemGroup>
 
 </Project>
