--- a/src/bunit.xunit.tests/bunit.xunit.tests.csproj
+++ b/src/bunit.xunit.tests/bunit.xunit.tests.csproj
@@ -4,17 +4,18 @@
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<IsPackable>false</IsPackable>
 		<RootNamespace>Bunit</RootNamespace>
-		<AssemblyName>Bunit.Core.Tests</AssemblyName>
+		<AssemblyName>Bunit.Xunit.Tests</AssemblyName>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AngleSharp" Version="0.14.0" />
-		<PackageReference Include="AngleSharp.Css" Version="0.14.0" />
-		<PackageReference Include="AngleSharp.Diffing" Version="0.14.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.0" />
 		<PackageReference Include="Moq" Version="4.13.1" />
 		<PackageReference Include="Shouldly" Version="4.0.0-beta0002" />
 		<PackageReference Include="xunit" Version="2.4.1" />
+		<PackageReference Include="xunit.assert" Version="2.4.*" />
+		<PackageReference Include="xunit.extensibility.core" Version="2.4.*" />
+		<PackageReference Include="xunit.extensibility.execution" Version="2.4.*" />
+		<PackageReference Include="xunit.runner.utility" Version="2.4.*" />		
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -27,7 +28,9 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\bunit.core\bunit.core.csproj" />
-		<ProjectReference Include="..\bunit.testassets\bunit.testassets.csproj" />		
+		<ProjectReference Include="..\bunit.web\bunit.web.csproj" />
+		<ProjectReference Include="..\bunit.xunit\bunit.xunit.csproj" />
+		<ProjectReference Include="..\bunit.testassets\bunit.testassets.csproj" />
 	</ItemGroup>
 
 </Project>
