--- a/src/bunit.xunit/bunit.xunit.csproj
+++ b/src/bunit.xunit/bunit.xunit.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="xunit.assert" Version="2.4.*" />
 		<PackageReference Include="xunit.extensibility.core" Version="2.4.*" />
 		<PackageReference Include="xunit.extensibility.execution" Version="2.4.*" />
+		<PackageReference Include="xunit.runner.utility" Version="2.4.1" />
 	</ItemGroup>
 
 	<ItemGroup>
