--- a/src/bunit.testassets/bunit.testassets.csproj
+++ b/src/bunit.testassets/bunit.testassets.csproj
@@ -8,8 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.*" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.3" />
 	</ItemGroup>
 
 </Project>
