--- a/src/bunit.xunit.tests/bunit.xunit.tests.csproj
+++ b/src/bunit.xunit.tests/bunit.xunit.tests.csproj
@@ -9,10 +9,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.0" />
-		<PackageReference Include="Moq" Version="4.13.1" />
+		<PackageReference Include="Moq" Version="4.14.0" />
 		<PackageReference Include="Shouldly" Version="4.0.0-beta0002" />
 		<PackageReference Include="xunit" Version="2.4.1" />
 		<PackageReference Include="xunit.assert" Version="2.4.*" />
+		<PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
+		<PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
+		<PackageReference Include="xunit.runner.utility" Version="2.4.1" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
