--- a/src/bunit.xunit/bunit.xunit.csproj
+++ b/src/bunit.xunit/bunit.xunit.csproj
@@ -7,6 +7,24 @@
 		<AssemblyName>Bunit.Xunit</AssemblyName>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<PackageId>bunit.xunit</PackageId>
+		<Title>bUnit.xunit</Title>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryUrl>https://github.com/egil/bunit.git</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryBranch>#{BRANCH}#</RepositoryBranch>
+		<RepositoryCommit>#{COMMIT}#</RepositoryCommit>
+		<PackageProjectUrl>https://bunit.egilhansen.com</PackageProjectUrl>
+		<PackageTags>bUnit;razor components;blazor components;unit testing;testing blazor components;blazor server;blazor wasm</PackageTags>
+		<Authors>Egil Hansen</Authors>
+		<Company>Egil Hansen</Company>
+		<Product>bUnit</Product>
+		<Description>
+			bUnit.xunit is an xUnit extension for bUnit, that provides a way for xUnit to run bUnit's razor-based tests, as well as other helpful extensions to make the testing experience better if you use xUnit for writing your tests.
+		</Description>
+	</PropertyGroup>
+	
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.*" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.*" />
