--- a/src/bunit.testassets/bunit.testassets.csproj
+++ b/src/bunit.testassets/bunit.testassets.csproj
@@ -3,13 +3,13 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<RazorLangVersion>3.0</RazorLangVersion>
-		<RootNamespace>Bunit</RootNamespace>
-		<AssemblyName>Bunit.TestsAssets</AssemblyName>
+		<RootNamespace>Bunit.TestAssets</RootNamespace>
+		<AssemblyName>Bunit.TestAssets</AssemblyName>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.3" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.*" />
 	</ItemGroup>
 
 </Project>
