--- a/src/bunit.web.tests/bunit.web.tests.csproj
+++ b/src/bunit.web.tests/bunit.web.tests.csproj
@@ -29,6 +29,7 @@
 		<ProjectReference Include="..\bunit.core\bunit.core.csproj" />
 		<ProjectReference Include="..\bunit.web\bunit.web.csproj" />
 		<ProjectReference Include="..\bunit.xunit\bunit.xunit.csproj" />
+		<ProjectReference Include="..\bunit.testassets\bunit.testassets.csproj" />
 	</ItemGroup>
 
 </Project>
