--- a/src/bunit.xunit/bunit.xunit.csproj
+++ b/src/bunit.xunit/bunit.xunit.csproj
@@ -7,6 +7,10 @@
 		<AssemblyName>Bunit.Xunit</AssemblyName>
 	</PropertyGroup>
 
+<PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+
 	<PropertyGroup>
 		<PackageId>bunit.xunit</PackageId>
 		<Title>bUnit.xunit</Title>
@@ -23,6 +27,10 @@
 		<Description>
 			bUnit.xunit is an xUnit extension for bUnit, that provides a way for xUnit to run bUnit's razor-based tests, as well as other helpful extensions to make the testing experience better if you use xUnit for writing your tests.
 		</Description>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	</PropertyGroup>
 
 	<ItemGroup>
