--- a/src/bunit.nunit/bunit.nunit.csproj
+++ b/src/bunit.nunit/bunit.nunit.csproj
@@ -7,6 +7,10 @@
 		<AssemblyName>Bunit.Nunit</AssemblyName>
 	</PropertyGroup>
 
+<PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.*" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.*" />
