--- a/src/bunit.testassets/bunit.testassets.csproj
+++ b/src/bunit.testassets/bunit.testassets.csproj
@@ -5,6 +5,7 @@
 		<RazorLangVersion>3.0</RazorLangVersion>
 		<RootNamespace>Bunit.TestAssets</RootNamespace>
 		<AssemblyName>Bunit.TestAssets</AssemblyName>
+		<IsPackable>false</IsPackable>
 	</PropertyGroup>
 
 	<ItemGroup>
