--- a/src/bunit.core.tests/bunit.core.tests.csproj
+++ b/src/bunit.core.tests/bunit.core.tests.csproj
@@ -8,6 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.*" />
 		<PackageReference Include="AngleSharp" Version="0.14.0" />
 		<PackageReference Include="AngleSharp.Css" Version="0.14.0" />
 		<PackageReference Include="AngleSharp.Diffing" Version="0.14.0" />
@@ -27,7 +29,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\bunit.core\bunit.core.csproj" />
-		<ProjectReference Include="..\bunit.testassets\bunit.testassets.csproj" />		
+		<ProjectReference Include="..\bunit.testassets\bunit.testassets.csproj" />
 	</ItemGroup>
 
 </Project>
