--- a/src/bunit.xunit.tests/bunit.xunit.tests.csproj
+++ b/src/bunit.xunit.tests/bunit.xunit.tests.csproj
@@ -8,6 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.*" />
 		<PackageReference Include="System.Reflection.Metadata" Version="1.8.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.0" />
 		<PackageReference Include="Moq" Version="4.14.1" />
